[package]
name = "mokinho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
fake = { version = "2.9.2", features = ["derive", "uuid"] }
serde_json = "1.0.111"
regex = "1.10.2"
